update image source in no.html

--- a/no.html
+++ b/no.html
@@ -15,7 +15,7 @@
     <img
       class="hero-img"
       alt="Reaction image"
-      src="./assets/no page.png"
+      src="https://i.pinimg.com/736x/b8/e8/0f/b8e80f034c09c92e4487348ad4751e1e.jpg"
     />
 
     <div class="actions" role="group" aria-label="Try again">
