change image source flowers.html
Updated the image source to a new URL.

--- a/gift 1 flowers.html
+++ b/gift 1 flowers.html
@@ -22,7 +22,7 @@
       <!-- LEFT: image -->
       <figure class="media">
         <img
-          src="./assets/flowers photo.png"
+          src="https://i.pinimg.com/736x/e9/3b/67/e93b67346e4898d85e9049b506ab6e5f.jpg"
           alt="Memory image"
           class="panel-img"
           width="800" height="800"
