update image source for giant photo

--- a/gift 2 pictures.html
+++ b/gift 2 pictures.html
@@ -13,7 +13,7 @@
     <!-- GIANT PHOTO -->
     <figure class="giant-photo card" style="margin:0">
       <img
-        src="./assets/picture photo.png"
+        src="https://i.pinimg.com/736x/b6/5a/7d/b65a7d9c9d1afedc9f13420912726e63.jpg"
         alt="Big memory photo"
         class="giant-img"
         width="1600" height="1000"
