update image source in letter.html

--- a/gift 3 letter.html
+++ b/gift 3 letter.html
@@ -122,7 +122,7 @@
       <!-- IMAGE -->
       <aside class="polaroid-frame">
        <div class="polaroid-inner">
-         <img src="./assets/letter photo.jpg" alt="A favorite memory">
+         <img src="https://i.pinimg.com/736x/4b/9d/6c/4b9d6c73b2a5a811ec61523d027bc2af.jpg" alt="A favorite memory">
        </div>
        <span class="pin">★</span>
       </aside>
