--- a/gift 2 pictures.html
+++ b/gift 2 pictures.html
@@ -34,12 +34,9 @@
         <audio
           id="song"
           preload="metadata"
-          src="https://rawcdn.githack.com/river-moss/vindication-project/665a0ac24369e149c89d708ab217b4245a5b7571/song.mp3"
+          src="https://rawcdn.githack.com/river-moss/vindication-project/main/song.mp3">
         </audio>
       </div>
-    
-      
-
   </main>
 
   <!-- Back to 3 gifts -->
